New method: DADA::MailingList::Settings save_w_params()
Always you to pass a Perl Object with a compatible param() method (like CGI.pm's) as well as fallback list settings. 

This cuts down on code that just repeats itself. 

Tests (2) included.

--- a/dada/DADA/Template/templates/edit_template_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_template_screen.tmpl
@@ -67,7 +67,7 @@
 	  
 	  <br />
 	  
-	  <input type="text" id="url_template" name="url_template" value="<!-- tmpl_var url_template escape="HTML" -->" size="65" />
+	  <input type="text" id="url_template" name="url_template" value="<!-- tmpl_var list_settings.url_template escape="HTML" -->" size="65" />
 	 </p>
 	 
 <!--/tmpl_if -->
@@ -82,7 +82,7 @@
  <tr>
   <td>
    <p>
-    <input type="checkbox" id="apply_list_template_to_html_msgs" name="apply_list_template_to_html_msgs" value="1" <!-- tmpl_if apply_list_template_to_html_msgs -->checked="checked"<!--/tmpl_if--> />
+    <input type="checkbox" id="apply_list_template_to_html_msgs" name="apply_list_template_to_html_msgs" value="1" <!-- tmpl_if list_settings.apply_list_template_to_html_msgs -->checked="checked"<!--/tmpl_if--> />
    </p>
   </td>
   <td>
