--- a/dada/DADA/Template/templates/edit_html_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_html_type_screen.tmpl
@@ -37,7 +37,7 @@
  to subscribe to your list.
 </p>
 <p>
- <textarea name="html_confirmation_message" id="html_confirmation_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var html_confirmation_message --></textarea> 
+ <textarea name="html_confirmation_message" id="html_confirmation_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var list_settings.html_confirmation_message --></textarea> 
 </p>
 
 </fieldset> 
@@ -52,7 +52,7 @@
  confirmation email's subscription link.
 </p>
 <p>
- <textarea name="html_subscribed_message" id="html_subscribed_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var html_subscribed_message --></textarea>
+ <textarea name="html_subscribed_message" id="html_subscribed_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var list_settings.html_subscribed_message --></textarea>
 </p>
 </fieldset> 
 	
@@ -65,7 +65,7 @@
  unsubscribe from your list.
 </p>
  <p>
- <textarea name="html_unsub_confirmation_message" id="html_unsub_confirmation_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var html_unsub_confirmation_message --></textarea>
+ <textarea name="html_unsub_confirmation_message" id="html_unsub_confirmation_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var list_settings.html_unsub_confirmation_message --></textarea>
 </p>
 
 </fieldset> 
@@ -74,7 +74,7 @@
 <p> This text is shown after someone unsubscribes.
 </p>
 <p>
- <textarea name="html_unsubscribed_message" id="html_unsubscribed_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var html_unsubscribed_message --></textarea>
+ <textarea name="html_unsubscribed_message" id="html_unsubscribed_message" rows="10" cols="50" style="<!-- tmpl_var text_area_style -->"><!-- tmpl_var list_settings.html_unsubscribed_message --></textarea>
 </p>
 </fieldset> 
 
