--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -155,7 +155,7 @@
 		This email is sent after the person replies to the subscription confirmation email. 
 	</p>
 	
-	<!-- tmpl_if list_settings.list_settings.send_sub_success_email --> 
+	<!-- tmpl_if list_settings.send_sub_success_email --> 
 			<p class="positive">Send Subscription Successful Emails  is Enabled.</p>
 	<!-- tmpl_else --> 
 		<p class="error">Send Subscription Successful Emails  is Disabled.</p>
