Proof of concept work to get, <!-- tmpl_set name="foo" value="bar" --> support in the templating language

--- a/dada/DADA/Template/templates/default_list_template.tmpl
+++ b/dada/DADA/Template/templates/default_list_template.tmpl
@@ -5,7 +5,7 @@
  
  <head>
   <!-- <!-- tmpl_var PROGRAM_NAME --> <!-- tmpl_var VER --> -->
-  <title><!-- tmpl_var title --></title>
+  <title><!-- tmpl_var dm_title --></title>
   <style type="text/css" media="all">
    <!-- tmpl_if comment --> 
 	   /* Not @imported, since AOL rejects msgs with linked stylesheets 
