--- a/dada/DADA/Template/templates/default_screen.tmpl
+++ b/dada/DADA/Template/templates/default_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin default_screen.tmpl -->
 
+<!-- tmpl_set name="dm_title" value="Sign Up for a List" -->
+ 
 
 <!-- tmpl_if error_invalid_list --> 
 <p class="error">
