--- a/dada/DADA/Template/templates/default_list_template.tmpl
+++ b/dada/DADA/Template/templates/default_list_template.tmpl
@@ -28,7 +28,7 @@
   <div id="PageWrapper">
    <div id="Header"  onclick="location.href='<!-- tmpl_var PROGRAM_URL -->';" style="cursor:pointer;">
     <span id="Title">
-     <!-- tmpl_var title -->
+     <!-- tmpl_var dm_title -->
     </span>
     <div class="floatclear"></div>
    </div><!-- ends id="Header" -->
