Initial support for both, "list" and "admin" wrapping. YEAH!

--- a/dada/DADA/Template/templates/add_email_screen.tmpl
+++ b/dada/DADA/Template/templates/add_email_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin add_email_screen.tmpl -->
 
-
+<!-- tmpl_set name="title" value="Your Subscribers - Verify Invitations/Additions" -->
 <p>
 Manage Subscribers (<!-- tmpl_var type_title -->) 
 &#187; 
