--- a/dada/DADA/Template/templates/change_info_screen.tmpl
+++ b/dada/DADA/Template/templates/change_info_screen.tmpl
@@ -1,3 +1,5 @@
+<!-- tmpl_set name="title" value="Change List Information" -->
+
 <!-- begin change_info_screen.tmpl -->
 
 <!-- tmpl_include help_link_widget.tmpl -->
