--- a/dada/DADA/Template/templates/change_password_screen.tmpl
+++ b/dada/DADA/Template/templates/change_password_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin change_password_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Change List Password" -->
+
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <p>
