--- a/dada/DADA/Template/templates/confirm_captcha_step_screen.tmpl
+++ b/dada/DADA/Template/templates/confirm_captcha_step_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin confirm_captcha_step_screen.tmpl --> 
 
-
+<!-- tmpl_set name="title" value="Subscription Almost Complete" -->
 <!-- tmpl_unless captcha_auth --> 
 
 <p class="error"> 
