--- a/dada/DADA/Template/templates/delete_email_screen_filtered.tmpl
+++ b/dada/DADA/Template/templates/delete_email_screen_filtered.tmpl
@@ -1,6 +1,6 @@
 <!-- begin delete_email_screen_filtered.tmpl -->
 
-
+<!-- tmpl_set name="title" value="Verify Deletions" -->
 <p>
  Manage Subscribers (<!-- tmpl_var type_title -->)
 &#187;
