--- a/dada/DADA/Template/templates/delete_list_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin delete_list_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Delete This Mailing List" -->
+
 <!-- tmpl_include help_link_widget.tmpl --> 
 
 
