--- a/dada/DADA/Template/templates/edit_archived_msg_prefs_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_archived_msg_prefs_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- begin edit_archived_msg_prefs_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Edit Archived Message Preferences" -->
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
 	 <input type="hidden" name="f" value="edit_archived_msg" /> 
