--- a/dada/DADA/Template/templates/edit_type_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_type_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin edit_type_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Email Message Templates" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_if done -->
