--- a/dada/DADA/Template/templates/feature_set_screen.tmpl
+++ b/dada/DADA/Template/templates/feature_set_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin feature_set_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Customize Feature Set" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post" name="default_form">  
