--- a/dada/DADA/Template/templates/filter_using_black_list.tmpl
+++ b/dada/DADA/Template/templates/filter_using_black_list.tmpl
@@ -1,5 +1,7 @@
 <!-- start filter_using_black_list.tmpl -->
 
+<!-- tmpl_set name="title" value="Filtering Subscription List..." -->
+
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
  <input type="hidden" name="process" value="delete" />
  <input type="hidden" name="f"       value="checker" />
