--- a/dada/DADA/Template/templates/html_code_screen.tmpl
+++ b/dada/DADA/Template/templates/html_code_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin html_code_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Subscription Form HTML" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 
