--- a/dada/DADA/Template/templates/list_cp_options.tmpl
+++ b/dada/DADA/Template/templates/list_cp_options.tmpl
@@ -1,5 +1,7 @@
 <!-- begin list_cp_options.tmpl --> 
 
+<!-- tmpl_set name="title" value="Options" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_if done -->
