--- a/dada/DADA/Template/templates/list_invite_screen.tmpl
+++ b/dada/DADA/Template/templates/list_invite_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- begin list_invite_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Invitations" -->
 <!-- tmpl_include help_link_widget.tmpl --> 
 
 
