--- a/dada/DADA/Template/templates/list_options_screen.tmpl
+++ b/dada/DADA/Template/templates/list_options_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin list_options_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Mailing List Options" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_if done -->
