--- a/dada/DADA/Template/templates/manage_script_screen.tmpl
+++ b/dada/DADA/Template/templates/manage_script_screen.tmpl
@@ -1,3 +1,6 @@
+<!-- begin manage_script_screen.tmpl --> 
+
+<!-- tmpl_set name="title" value="About <!-- tmpl_var PROGRAM_URL -->" --> 
 <h1>
 	Script Information
 </h1>
