--- a/dada/DADA/Template/templates/new_list_created_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_created_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin new_list_created_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Your New List Has Been Created" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <h1>
  The Following Information Was Saved: 
 </h1>
