--- a/dada/DADA/Template/templates/new_list_screen.tmpl
+++ b/dada/DADA/Template/templates/new_list_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin new_list_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Create a New List" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <!-- tmpl_if name="errors" -->
 	
 	<p class="error">
