--- a/dada/DADA/Template/templates/pass_gen_screen.tmpl
+++ b/dada/DADA/Template/templates/pass_gen_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin pass_gen_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Password Encryption" -->
+
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post"> 
  <p> 
   <label for="pw">  
