--- a/dada/DADA/Template/templates/profile_fields.tmpl
+++ b/dada/DADA/Template/templates/profile_fields.tmpl
@@ -1,5 +1,7 @@
 <!-- begin profile_fields.tmpl --> 
 
+<!-- tmpl_set name="title" value="Profile Fields" -->
+
 <!-- tmpl_include help_link_widget.tmpl --> 
 
 
