--- a/dada/DADA/Template/templates/profile_help.tmpl
+++ b/dada/DADA/Template/templates/profile_help.tmpl
@@ -1,6 +1,6 @@
 <!-- begin profile_help.tmpl --> 
 
-
+<!-- tmpl_set name="title" value="What are <!-- tmpl_var PROGRAM_NAME --> Profiles?" --> 
 <h1>
 	What are <!-- tmpl_var PROGRAM_NAME --> Profiles?
 </h1> 
