--- a/dada/DADA/Template/templates/profile_login.tmpl
+++ b/dada/DADA/Template/templates/profile_login.tmpl
@@ -1,6 +1,7 @@
 <!-- being profile_login.tmpl --> 
 
-
+<!-- tmpl_set name="title" value="Profile Login" --> 
+<!-- tmpl_set name="show_profile_widget" value="0" --> 
 
 <p style="text-align:right">
 	<a href="<!-- tmpl_var PROGRAM_URL -->/profile_help/">
