--- a/dada/DADA/Template/templates/profile_register.tmpl
+++ b/dada/DADA/Template/templates/profile_register.tmpl
@@ -1,5 +1,7 @@
 <!-- begin profile_register.tmpl --> 
 
+<!-- tmpl_set name="title" value="Profile Register Confirm" -->
+
 <h1>
 	Profile Registration is Successful!
 </h1> 
