--- a/dada/DADA/Template/templates/profile_reset_password.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password.tmpl
@@ -1,5 +1,6 @@
 <!-- begin profile_reset_password.tmpl --> 
 
+<!-- tmpl_set name="title" value="Reset Your Profile Password" --> 
 	<h1>Authorization Successful!</h1> 
 	
 	<fieldset>
