--- a/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_reset_password_confirm.tmpl
@@ -1,5 +1,6 @@
 <!-- begin profile_reset_password_confirm.tmpl --> 
 
+<!-- tmpl_set name="title" value="Profile Reset Password Confirm" -->
 <h1>
 	Profile Reset Confirmation Email Sent!
 </h1>
