--- a/dada/DADA/Template/templates/profile_update_email_auth_send.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_auth_send.tmpl
@@ -1,5 +1,7 @@
 <!-- begin profile_update_email_auth_send.tmpl --> 
 
+<!-- tmpl_set name="title" value="Authorization Email Sent" -->
+
 <h1>
 	Profile Email Update Confirmation Sent!
 </h1>
