--- a/dada/DADA/Template/templates/profile_update_email_error.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_error.tmpl
@@ -1,5 +1,6 @@
 <!-- begin profile_update_email_error.tmpl --> 
 
+<!-- tmpl_set name="title" value="Update Profile Email Results:" --> 
 <p>
 	Something went wrong with the confirmation of your Profile Email Update.
 </p> 
