--- a/dada/DADA/Template/templates/search_list_screen.tmpl
+++ b/dada/DADA/Template/templates/search_list_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin search_list_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Search Email Subscribers: Search Results" -->
+
 
 <!-- tmpl_include list_type_switch_widget.tmpl -->
 
