--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin sending_monitor_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Monitor Your Mailing" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 
