--- a/dada/DADA/Template/templates/sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_preferences_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- being sending_preferences_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Sending Preferences" -->
 
 <!-- tmpl_if list_settings.send_via_smtp --> 
 	<p class="alert">Messages are currently being sent via SMTP
