--- a/dada/DADA/Template/templates/sending_tuning_options.tmpl
+++ b/dada/DADA/Template/templates/sending_tuning_options.tmpl
@@ -1,5 +1,6 @@
 <!-- begin sending_tuning_options.tmpl --> 
 
+<!-- tmpl_set name="title" value="Domain-Specific Sending Tuning" -->
 <p>
   Mail Sending
 	&#187;
