--- a/dada/DADA/Template/templates/subscriber_help_screen.tmpl
+++ b/dada/DADA/Template/templates/subscriber_help_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin subscriber_help_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Subscription Help" -->
+
 <p>
  This information will hopefully help you if you're trying to subscribe to 
  <strong>
