--- a/dada/DADA/Template/templates/view_archive_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin view_archive_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Manage Archives" -->
+
 <p>
  <em>
   Sent: <!-- tmpl_var date -->
