--- a/dada/DADA/Template/templates/what_is_dada_mail.tmpl
+++ b/dada/DADA/Template/templates/what_is_dada_mail.tmpl
@@ -1,5 +1,6 @@
 <!-- begin what_is_dada_mail.tmpl -->
 
+<!-- tmpl_set name="title" value="What is Dada Mail?" -->
 
 <h1>Dada Mail - Write Once: Distribute Everywhere </h1>
 
