--- a/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_install_dada_mail_scrn.tmpl
@@ -1,5 +1,9 @@
 <!-- begin installer_install_dada_mail_scrn.tmpl --> 
 
+<!-- tmpl_set name="title" value="Installing/Configuring <!-- tmpl_var PROGRAM_NAME -->" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <fieldset> 
 <legend>
 	<a href="#" onclick="toggleDisplay('install_log');return false;">+/-</a> Installation Log:
