--- a/dada/DADA/Template/templates/add_screen.tmpl
+++ b/dada/DADA/Template/templates/add_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- begin add_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Your Subscribers - Invite/Add" -->
 <!-- tmpl_include help_link_widget.tmpl --> 
 
 
