--- a/dada/DADA/Template/templates/admin_screen.tmpl
+++ b/dada/DADA/Template/templates/admin_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin admin_screen.tmpl -->
 
-<!-- tmpl_set name="dm_title" value="Administration" --> 
+<!-- tmpl_set name="title" value="Administration" --> 
 <!-- tmpl_set name="show_profile_widget" value="0" --> 
 
 
