--- a/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/adv_sending_preferences_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin adv_sending_preferences_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Advanced Sending Preferences" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 
