--- a/dada/DADA/Template/templates/congrats_screen.tmpl
+++ b/dada/DADA/Template/templates/congrats_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin congrats_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Welcome to <!-- tmpl_var PROGRAM_NAME -->" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+ 
 <form action="<!-- tmpl_var name="PROGRAM_URL" -->" method="post">
  
 <!-- tmpl_unless ROOT_PASS_IS_ENCRYPTED -->
