--- a/dada/DADA/Template/templates/default_list_template.tmpl
+++ b/dada/DADA/Template/templates/default_list_template.tmpl
@@ -5,7 +5,7 @@
  
  <head>
   <!-- <!-- tmpl_var PROGRAM_NAME --> <!-- tmpl_var VER --> -->
-  <title><!-- tmpl_var dm_title --></title>
+  <title><!-- tmpl_var title --></title>
   <style type="text/css" media="all">
    <!-- tmpl_if comment --> 
 	   /* Not @imported, since AOL rejects msgs with linked stylesheets 
@@ -28,7 +28,7 @@
   <div id="PageWrapper">
    <div id="Header"  onclick="location.href='<!-- tmpl_var PROGRAM_URL -->';" style="cursor:pointer;">
     <span id="Title">
-     <!-- tmpl_var dm_title -->
+     <!-- tmpl_var title -->
     </span>
     <div class="floatclear"></div>
    </div><!-- ends id="Header" -->
