--- a/dada/DADA/Template/templates/delete_email_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_email_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin delete_email_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Manage Deletions" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_include list_type_switch_widget.tmpl -->
