--- a/dada/DADA/Template/templates/delete_list_success_screen.tmpl
+++ b/dada/DADA/Template/templates/delete_list_success_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin delete_list_success_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Deletion Successful" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <p>
  You have deleted your Mailing List.
 </p>
