--- a/dada/DADA/Template/templates/edit_archived_msg.tmpl
+++ b/dada/DADA/Template/templates/edit_archived_msg.tmpl
@@ -1,5 +1,6 @@
 <!-- begin edit_archived_msg.tmpl --> 
 
+<!-- tmpl_set name="title" value="Edit Archived Message" -->
 <!-- tmpl_if done --> 
 	<!-- tmpl_var GOOD_JOB_MESSAGE --> 
 <!-- /tmpl_if --> 
