--- a/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
+++ b/dada/DADA/Template/templates/edit_subscribed_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin edit_subscribed_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Edit Subscriber" -->
+
 <!-- tmpl_if done -->
 	<!-- tmpl_var GOOD_JOB_MESSAGE -->
 <!--/tmpl_if-->
