--- a/dada/DADA/Template/templates/list_login_form.tmpl
+++ b/dada/DADA/Template/templates/list_login_form.tmpl
@@ -1,6 +1,6 @@
 <!-- begin list_login_form.tmpl -->
 
-<!-- tmpl_set name="dm_title" value="Sign In to <!-- tmpl_var list_settings.list_name -->" -->
+<!-- tmpl_set name="title" value="Sign In to <!-- tmpl_var list_settings.list_name -->" -->
 <!-- tmpl_set name="show_profile_widget" value="0" -->
 
 
