--- a/dada/DADA/Template/templates/list_page_screen.tmpl
+++ b/dada/DADA/Template/templates/list_page_screen.tmpl
@@ -1,6 +1,6 @@
 <!-- begin list_page_screen.tmpl -->
 
-<!-- tmpl_set name="dm_title" value="<!-- tmpl_var list_settings.list_name -->" -->
+<!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name -->" -->
 
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 <h1>
