--- a/dada/DADA/Template/templates/list_password_confirmation_screen.tmpl
+++ b/dada/DADA/Template/templates/list_password_confirmation_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin list_password_confirmation_screen.tmpl --> 
 
+
+<!-- tmpl_set name="title" value="Password Confirmation Sent" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <h1>Mailing List Password Reset Confirmation Sent</h1> 
 
 <p>
