--- a/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
+++ b/dada/DADA/Template/templates/mass_mailing_preferences_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- begin mass_mailing_preferences_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Mass Mailing Preferences" -->
 
 <!-- tmpl_include help_link_widget.tmpl --> 
 
