--- a/dada/DADA/Template/templates/profile_home.tmpl
+++ b/dada/DADA/Template/templates/profile_home.tmpl
@@ -1,5 +1,7 @@
 <!-- begin profile_home.tmpl --> 
 
+<!-- tmpl_set name="title" value="Profile" --> 
+<!-- tmpl_set name="show_profile_widget" value="0" -->
 
 <script> 
 function toggleDisplay(target) {
