--- a/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
+++ b/dada/DADA/Template/templates/profile_update_email_confirm.tmpl
@@ -1,5 +1,8 @@
 <!-- begin profile_update_email_confirm.tmpl --> 
 
+<!-- tmpl_set name="title" value="Update Profile Email Results:" -->
+<!-- tmpl_set name="show_profile_widget" value="0" --> 
+
 <h2>Update Your Profile and Your Mailing List Subscriptions, Changing,</h2>
 
  	<ul> 
