--- a/dada/DADA/Template/templates/send_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_email_screen.tmpl
@@ -1,5 +1,6 @@
 <!-- begin send_email_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Send a Message" -->
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_if list_settings.group_list --> 
