--- a/dada/DADA/Template/templates/send_url_email_screen.tmpl
+++ b/dada/DADA/Template/templates/send_url_email_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin send_url_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Send a Webpage" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <!-- tmpl_include mass_mailing_limit_notice_widget.tmpl --> 
