--- a/dada/DADA/Template/templates/view_archive_index_screen.tmpl
+++ b/dada/DADA/Template/templates/view_archive_index_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin view_archive_index_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="View Archive" -->
+
 <!-- tmpl_include help_link_widget.tmpl -->
 
 <form name="email_form" action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
