--- a/dada/DADA/Template/templates/view_list_screen.tmpl
+++ b/dada/DADA/Template/templates/view_list_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin view_list_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="View" -->
+
 <!-- tmpl_include help_link_widget.tmpl --> 
 
 
