--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1,5 +1,8 @@
 <!-- begin installer_configure_dada_mail_scrn.tmpl --> 
 
+<!-- tmpl_set name="title" value="Install <!-- tmpl_var PROGRAM_NAME -->" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <h1>Install <!-- tmpl_var PROGRAM_NAME --></h1> 
 	
 <!-- tmpl_if errors --> 
