More tmpl_set support

--- a/dada/DADA/Template/templates/error_bad_SQL_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_SQL_setup_screen.tmpl
@@ -1,3 +1,10 @@
+<!-- begin error_bad_SQL_setup_screen.tmpl --> 
+
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
+
 <p>
  Check your SQL table setup. One or more tables appear to be either missing, or formatted incorrectly. 
 </p>
@@ -5,3 +12,7 @@
 <p>
 	If you've recently upgraded <!-- tmpl_var PROGRAM_NAME -->, make sure you've run any migration utilities needed. 
 </p>
+
+<!-- end error_bad_SQL_setup_screen.tmpl --> 
+
+
