--- a/dada/DADA/Template/templates/error_no_dbm_package_installed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_dbm_package_installed_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_no_dbm_package_installed_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h2>No DBM Package Found!</h2> 
 
 <p>If this is a new installation of <!-- tmpl_var PROGRAM_NAME -->, you may need to install <!-- tmpl_var PROGRAM_NAME --> using the SQL backend, as no 
