--- a/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_show_archives_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- tmpl_var error_no_show_archives_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  No Archived Messages
 </h1> 
