--- a/dada/DADA/Template/templates/error_not_allowed_to_view_archives_screen.tmpl
+++ b/dada/DADA/Template/templates/error_not_allowed_to_view_archives_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_not_allowed_to_view_archives_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>Sorry,</h1> 
 
 <p>You may not be allowed to view archives for this list, before first becoming a 
