--- a/dada/DADA/Template/templates/error_settings_possibly_corrupted_screen.tmpl
+++ b/dada/DADA/Template/templates/error_settings_possibly_corrupted_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_settings_possibly_corrupted_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <p>Please contact the Server Administrator at: 
 <a href="mailto:<!-- tmpl_var SERVER_ADMIN -->"><!-- tmpl_var SERVER_ADMIN --></a> 
 detailing the problem you are having with this request.</p>
