--- a/dada/DADA/Template/templates/error_sql_connect_error_screen.tmpl
+++ b/dada/DADA/Template/templates/error_sql_connect_error_screen.tmpl
@@ -1,5 +1,9 @@
 <h2>SQL Connect Error</h2>
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <p>
  There's been a problem with connecting to the SQL server. Make sure your login information is correct.
 </p>
