--- a/dada/DADA/Template/templates/error_unreadable_db_files_screen.tmpl
+++ b/dada/DADA/Template/templates/error_unreadable_db_files_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_unreadable_db_files_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h2>List Settings/Archives are unreadable!</h2>
 
 <p>Complete error message:</p>
