--- a/dada/DADA/Template/templates/setup_info_screen.tmpl
+++ b/dada/DADA/Template/templates/setup_info_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin setup_info_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="setup_info_screen" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <h1>Installation and Configuration</h1> 
 
 <!-- tmpl_if c_install --> 
