--- a/dada/DADA/Template/templates/error_already_sent_sub_confirmation_screen.tmpl
+++ b/dada/DADA/Template/templates/error_already_sent_sub_confirmation_screen.tmpl
@@ -1,5 +1,8 @@
 <!-- begin error_already_sent_sub_confirmation_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
 <h1>Problems with Confirmation Request</h1> 
 
 <p>
