--- a/dada/DADA/Template/templates/error_bad_ip_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_ip_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_bad_ip_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <p>
  You are not allowed to log into your list control panel from your present IP Address.
 </p> 
