--- a/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
+++ b/dada/DADA/Template/templates/error_bad_setup_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_bad_setup_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  Welcome to <!-- tmpl_var PROGRAM_NAME -->!
 </h1> 
