--- a/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
+++ b/dada/DADA/Template/templates/error_install_dir_still_around_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_install_dir_still_around_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 The, <em>dada/<strong>installer</strong></em> directory needs to be removed (preferably) or renamed, before you 
 can utilize Dada Mail. 
 
