--- a/dada/DADA/Template/templates/error_list_pass_no_match_screen.tmpl
+++ b/dada/DADA/Template/templates/error_list_pass_no_match_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_list_pass_no_match.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  Your New Password Doesn't Match
 </h1> 
