--- a/dada/DADA/Template/templates/error_mx_lookup_failed_screen.tmpl
+++ b/dada/DADA/Template/templates/error_mx_lookup_failed_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_mx_lookup_failed.screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  Invalid Email Address
 </h1> 
