--- a/dada/DADA/Template/templates/error_no_archive_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_archive_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_no_archive_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  No Archive for <!-- list_settings.list_name -->
 </h1> 
