--- a/dada/DADA/Template/templates/error_no_root_password_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_root_password_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_no_root_password_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>No Root Password Set</h1> 
 
 <p>The <!-- tmpl_var PROGRAM_NAME --> Root Password has 
