--- a/dada/DADA/Template/templates/error_no_support_for_displaying_message_source_screen.tmpl
+++ b/dada/DADA/Template/templates/error_no_support_for_displaying_message_source_screen.tmpl
@@ -1,5 +1,9 @@
 <!-- begin error_no_support_for_displaying_message_source_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>Sorry,</h1> 
 
 <p>
