--- a/dada/DADA/Template/templates/error_over_subscription_quota_screen.tmpl
+++ b/dada/DADA/Template/templates/error_over_subscription_quota_screen.tmpl
@@ -1,4 +1,9 @@
 <!-- begin error_over_subscription_quota_screen.tmpl --> 
+
+<!-- tmpl_set name="title" value="There Seems to be a Problem" -->
+<!-- tmpl_set name="show_profile_widget" value="0" -->
+
+
 <h1>
  Unable to Subscribe
 </h1> 
