more tmpl_set work

--- a/dada/DADA/Template/templates/archive_index_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_index_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin archive_index_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="<!-- tmpl_var list_settings.list_name Archives -->" --> 
+
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
 <!-- tmpl_if entries --> 
