--- a/dada/DADA/Template/templates/restore_lists_options_screen.tmpl
+++ b/dada/DADA/Template/templates/restore_lists_options_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin restore_lists_options_screen.tmpl --> 
 
+<!-- tmpl_set name="title" value="Restore List Information" -->
+
 <form action="<!-- tmpl_var S_PROGRAM_URL -->" method="post">
 	
 
