--- a/dada/DADA/Template/templates/search_archive_screen.tmpl
+++ b/dada/DADA/Template/templates/search_archive_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin search_archive_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="Archive Search Results" --> 
+
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
 <!-- tmpl_if search_results -->
