--- a/dada/DADA/Template/templates/archive_screen.tmpl
+++ b/dada/DADA/Template/templates/archive_screen.tmpl
@@ -1,5 +1,7 @@
 <!-- begin archive_screen.tmpl -->
 
+<!-- tmpl_set name="title" value="<!-- tmpl_var subject -->" -->
+
 <!-- tmpl_include name="list_breadcrumbs_widget.tmpl" -->
 
 <!-- tmpl_if send_archive_success -->
