--- a/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_index_screen.tmpl
@@ -280,7 +280,7 @@ Current Mass Mailings:
 
 </fieldset> 
 
-<!-- tmpl_if auto_pickup_dropped_mailings --> 
+<!-- tmpl_if list_settings.auto_pickup_dropped_mailings --> 
 
 <p class="alert">
   Auto Pickup of Dropped Mailings is enabled!
