--- a/dada/DADA/Template/templates/sending_monitor_screen.tmpl
+++ b/dada/DADA/Template/templates/sending_monitor_screen.tmpl
@@ -1,7 +1,24 @@
 
+
+
+
+
+<p>
+
+<a href="<!-- tmpl_var S_PROGRAM_URL -->?f=send_email"> 
+ Send a Message 
+</a> 
+
+  &#187;
+
+   <a href="<!-- tmpl_var S_PROGRAM_URL -->?f=sending_monitor">
+    Monitor Your Mailings
+  </a>
+
+
 <!-- tmpl_if header_subject_label --> 
 
-	<p>
+	
 	 &#187;
 	 <!-- tmpl_var name="header_subject_label" escape="HTML" --> 
 
