A small requested feature from the mailing list.

--- a/dada/DADA/Template/templates/default_admin_template.tmpl
+++ b/dada/DADA/Template/templates/default_admin_template.tmpl
@@ -42,7 +42,7 @@
     <div id="Menu">
      <p>
       <a href="<!-- tmpl_var PROGRAM_URL -->/list/<!-- tmpl_var list_settings.list -->/" target="_blank">
-	   <!-- tmpl_var list_settings.list_name -->
+	   <!-- tmpl_var list_settings.list_name --> (<!-- tmpl_var list_settings.list -->)
 	 </a>
      </p>
      <!-- tmpl_var login_switch_widget -->
